Fixed a major spacing issue in the beige project container by adjusting padding and flex alignment. Replaced hardcoded HTML with a dynamic JS array for easier project management. Added safety 'if' checks to the script so animations don't break on the homepage.

--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -25,6 +25,7 @@
     color: $black;
     padding: 3rem 6rem;
     margin-top: 6rem;
+    font-size: 0.8rem;
 
     .explore{
         @include flexCenter();
@@ -41,7 +42,7 @@
             padding-right: 3rem;
         }
 
-        p{
+        .exploreText{
             font-size: 1rem;
             font-weight: normal;
             line-height: 1.5rem;
@@ -57,43 +58,28 @@
 
     .jsProjectsGrid{
         @include gridThree();
-        gap: 2rem 1.5rem;
+        gap: 1rem;
 
         .eachJsProject{
-            height: 450px;
+            height: auto;
             background-color: #E2DFD0;
-            border-radius: 10px;
+            border-radius: 30px;
             font-family: "Poppins", sans-serif;
-            padding: 1rem;
 
             h2{
                 font-size: 1rem;
                 font-weight: bold;
-                margin-top: 1.2rem;
-            }
-
-            p{
-                line-height: normal;
-                font-size: 0.9rem;
-            }
-
-            a{
-                background-color: #345e82;
-                padding: 8px 10px;
-                border-radius: 5px;
-                text-decoration: none;
-                color: $white;
-                font-size: 0.8rem;
             }
             
             .jsImage{
-                height: 50%;
+                height: auto;
                 width: 100%;
 
                 img{
-                    height: 100%;
+                    height: 200px;
                     width: 100%;
-                    border-radius: 5px;
+                    border-top-right-radius: 24px;
+                    border-top-left-radius: 24px;
                 }
             }
         }
@@ -105,108 +91,59 @@
     margin: 3rem 0;
 
     h1{
-        margin: 3rem 0rem 1rem 0rem;
+        margin: 4rem 0rem 1rem 0rem;
         font-weight: bold;
         font-size: 2rem;
     }
 
     .reactProjectsGrid{
-        @include gridTwo();
+        @include gridThree();
         justify-content: center;
-        align-items: center;
-        gap: 2rem;
+        align-items: stretch;
+        gap: 1rem;
 
         .eachReactProject{
-            height: 450px;
-            background-color: #E2DFD0;
-            color: $black;
-            border-radius: 10px;
-            font-family: "Poppins", sans-serif;
-            padding: 1rem;
+            height: auto;
+            background-color: #000000;
+            color: #f4efef;
+            border-radius: 24px;
+            padding-bottom: 1.5rem;
 
             h2{
                 padding-top: 1rem;
                 font-size: 1rem;
                 font-weight: bold;
-                margin-top: 10px;
+                margin-top: 1rem;
+                padding: 0rem 1rem;
             }
 
             p{
-                line-height: normal;
-                font-size: 12px;
+                font-size: 0.8rem;
+                padding: 0rem 1rem;
             }
 
             a{
                 background-color: $white;
-                padding: 8px 10px;
+                padding: 5px 8px;
                 border-radius: 5px;
                 text-decoration: none;
-                color: #345e82;
-                font-size: 12px;
+                color: #000;
+                font-size: 0.8rem;
                 font-weight: bold;
+                margin: 0rem 1rem;
+                align-self: flex-start; 
             }
 
             .reactImage{
-                height: 70%;
+                height: auto;
                 width: 100%;
 
                 img{
-                    height: 100%;
+                    height: 200px;
                     width: 100%;
-                    border-radius: 5px;
+                    border-top-left-radius: 24px;
+                    border-top-right-radius: 24px;
                 }
-            }
-        }
-    }
-}
-
-.pythonProjects{
-    margin: 0;
-    padding: 2rem;
-
-    h1{
-        margin: 3rem 0rem 1rem 0rem;
-        font-weight: bold;
-        font-size: 2rem;
-    }
-
-    h2{
-        font-size: 1rem;
-        font-weight: bold;
-        margin-top: 10px;
-    }
-
-    .eachPythonProject{
-        margin-top: 2rem;
-        height: 500px;
-        background-color: #E2DFD0;
-        color: $black;
-        border-radius: 10px;
-        font-family: "Poppins", sans-serif;
-        padding: 1rem;
-
-        p{
-            line-height: normal;
-            font-size: 12px;
-        }
-        
-        a{
-            background-color: $white;
-            padding: 8px 10px;
-            border-radius: 5px;
-            text-decoration: none;
-            color: #345e82;
-            font-size: 12px;
-            font-weight: bold;
-        }
-
-        .pythonImage{
-            height: 80%;
-            width: 100%;
-
-            img{
-                height: 100%;
-                width: 100%;
             }
         }
     }
@@ -230,7 +167,7 @@
     }
 }
 
-@media (min-width: 651px) and (max-width: 900px){
+@media (min-width: 601px) and (max-width: 800px){
     .projectsPage{
         padding: 3rem;
 
@@ -250,9 +187,16 @@
             gap: 2rem 1.5rem;
         }
     }
+
+    .reactProjects{
+
+        .reactProjectsGrid{
+            @include gridTwo();
+        }
+    }
 }
 
-@media (min-width: 501px) and (max-width: 650px){
+@media (min-width: 501px) and (max-width: 600px){
     .projectsPage{
         padding: 3rem;
 
@@ -275,20 +219,19 @@
 
             .eachJsProject{
                 margin-top: 2rem;
-                height: 400px;
+                height: auto;
                 
                 p{
                     font-size: 0.8rem;
                 }
 
                 .jsImage{
-                    height: 60%;
+                    height: auto;
                     width: 100%;
 
                     img{
-                        height: 100%;
+                        height: 250px;
                         width: 100%;
-                        border-radius: 5px;
                     }
                 }
             }
@@ -306,9 +249,8 @@
             display: block;
 
             .eachReactProject{
-                height: 450px;
+                height: auto;
                 margin-top: 2rem;
-                padding: 1rem;
             }
         }
     }
@@ -335,7 +277,7 @@
 
 @media (max-width: 500px){
     .projectsPage{
-        padding: 2rem 1rem;
+        padding: 2rem 1.5rem;
 
         .explore{
             padding: 1rem;
@@ -359,18 +301,18 @@
 
             .eachJsProject{
                 margin-top: 1rem;
-                height: 450px;
+                height: auto;
                 
                 p{
                     font-size: 0.8rem;
                 }
 
                 .jsImage{
-                    height: 55%;
+                    height: auto;
                     width: 100%;
 
                     img{
-                        height: 100%;
+                        height: 250px;
                         width: 100%;
                     }
                 }
@@ -390,16 +332,15 @@
             display: block;
 
             .eachReactProject{
-                height: 400px;
+                height: auto;
                 margin-top: 2rem;
-                padding: 1rem;
 
                 .reactImage{
-                    height: 50%;
+                    height: auto;
                     width: 100%;
 
                     img{
-                        height: 100%;
+                        height: 250px;
                         width: 100%;
                     }
                 }
@@ -409,7 +350,7 @@
 
     .pythonProjects{
         margin: 0;
-        padding: 2rem 0rem;
+        padding: 4rem 0rem 2rem 0rem;
 
         h1{
             margin: 1rem 0rem 0rem 0rem;
